<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="441dp"
        android:layout_height="601dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/txtUsuarios"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="88dp"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="27dp"
            android:text="@string/txtusuarios" />

        <ListView
            android:id="@+id/usuarios"
            android:layout_width="391dp"
            android:layout_height="229dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="70dp" />

        <TextView
            android:id="@+id/txtUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="260dp"
            android:text="@string/txtUsuario" />

        <TextView
            android:id="@+id/txtnombreusuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/txtUsuario"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="102dp"
            android:layout_marginLeft="102dp"
            android:layout_marginBottom="0dp" />

        <TextView
            android:id="@+id/txtcontrasena"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/txtUsuario"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-12dp"
            android:layout_marginBottom="210dp"
            android:text="@string/contrasena" />

        <EditText
            android:id="@+id/cajacontrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txtcontrasena"
            android:layout_marginStart="-9dp"
            android:layout_marginTop="-16dp"
            android:layout_toEndOf="@+id/txtnombreusuario"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnjugar"
            android:layout_width="139dp"
            android:layout_height="58dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="29dp"
            android:layout_marginLeft="29dp"
            android:layout_marginBottom="119dp"
            android:text="@string/jugar" />

        <Button
            android:id="@+id/btnconsultar"
            android:layout_width="156dp"
            android:layout_height="59dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp"
            android:layout_marginBottom="121dp"
            android:text="@string/btnconsultar" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>